added favicon to login page

--- a/login page/login.html
+++ b/login page/login.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Login Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon" type="image/png" href="navicon.svg">
 </head>
 <body>
 	<!-- Image and text for navbar-->
