added favicon to registration page

--- a/newAccountPages/newAccount.html
+++ b/newAccountPages/newAccount.html
@@ -16,6 +16,8 @@
 
     <!--External CSS-->
     <link rel="stylesheet" href="newAccountStyle.css">
+
+    <link rel="icon" type="image/png" href="navicon.svg">
     <title>Create Account</title>
 </head>
 
