--- a/newAccountPages/newAccount.html
+++ b/newAccountPages/newAccount.html
@@ -63,7 +63,7 @@
                     <label for="gender">Gender</label>
                     <select class="form-control" id="gender">
                         <option>Male</option>
-                        <option>Feale</option>
+                        <option>Female</option>
                         <option>Other</option>
                     </select>
                 </div>
