fixed default option for gender and account type

--- a/newAccountPages/newAccount.html
+++ b/newAccountPages/newAccount.html
@@ -97,8 +97,9 @@
                 <div class="col-md-4 mb-3">
                     <label for="gender">Gender</label>
                     <select class="form-control" id="gender">
+                        <option selected hidden value=""></option> 
                         <option>Male</option>
-                        <option>Feale</option>
+                        <option>Female</option>
                         <option>Other</option>
                     </select>
                 </div>
@@ -181,6 +182,7 @@
                     <div class="col-md-12 mb-3">
                         <label for="accountType">Account type</label>
                         <select class="form-control" id="accountType">
+                            <option selected hidden value=""></option>
                             <option>Savings</option>
                             <option>Current</option>
                         </select>
