--- a/newAccountPages/newAccount.html
+++ b/newAccountPages/newAccount.html
@@ -17,6 +17,7 @@
     <!--External CSS-->
     <link rel="stylesheet" href="newAccountStyle.css">
     <title>Create Account</title>
+    <link rel="icon" type="image/png" href="navicon.svg">
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
@@ -58,6 +59,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Log Out</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -82,21 +86,15 @@
             <div class="form-row">
                 <div class="col-md-4 mb-3">
                     <label for="fname">First name</label>
-                    <input type="text" class="form-control" id="fname" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+                    <input type="text" class="form-control" id="fname" name="fname" required>
                 </div>
                 <div class="col-md-4 mb-3">
                     <label for="lname">Last name</label>
-                    <input type="text" class="form-control" id="lname" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+                    <input type="text" class="form-control" id="lname" name="lname" required>
                 </div>
                 <div class="col-md-4 mb-3">
                     <label for="gender">Gender</label>
-                    <select class="form-control" id="gender">
+                    <select class="form-control" id="gender" name="gender" required>
                         <option selected hidden value=""></option> 
                         <option>Male</option>
                         <option>Female</option>
@@ -109,7 +107,7 @@
             <div class="form-row">
                 <div class="col-md-6 mb-3">
                     <label for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -117,7 +115,7 @@
 
                 <div class="col-md-3 mb-3">
                     <label for="phone">Contact number</label>
-                    <input type="tel" class="form-control" id="phone" required>
+                    <input type="tel" class="form-control" id="phone" name="phone" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -125,7 +123,7 @@
 
                 <div class="col-md-3 mb-3">
                     <label for="dob">Date of Birth</label>
-                    <input type="date" class="form-control" id="dob" placeholder="dd-mm-yyyy" required>
+                    <input type="date" class="form-control" name="dob" id="dob" placeholder="dd-mm-yyyy" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -141,7 +139,7 @@
             <div class="form-row">
                 <div class="col-md-12 mb-3">
                     <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" required>
+                    <input type="text" name="address" class="form-control" id="address" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -152,21 +150,21 @@
             <div class="form-row">
                 <div class="col-md-6 mb-3">
                     <label for="city">City</label>
-                    <input type="text" class="form-control" id="city" required>
+                    <input type="text" class="form-control" name="city" id="city" required>
                     <div class="invalid-feedback">
                         Please provide a valid city.
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <label for="state">State</label>
-                    <input type="text" class="form-control" id="state" required>
+                    <input type="text" class="form-control" name="state" id="state" required>
                     <div class="invalid-feedback">
                         Please select a valid state.
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
                     <label for="zip">Zip</label>
-                    <input type="number" class="form-control" id="zip" required>
+                    <input type="number" class="form-control" name="zip" id="zip" required>
                     <div class="invalid-feedback">
                         Please provide a valid zip.
                     </div>
@@ -181,11 +179,28 @@
                 <div class="form-row">
                     <div class="col-md-12 mb-3">
                         <label for="accountType">Account type</label>
-                        <select class="form-control" id="accountType">
+                        <select class="form-control" name="accountType" id="accountType" required>
                             <option selected hidden value=""></option>
                             <option>Savings</option>
                             <option>Current</option>
                         </select>
+                    </div>
+                </div>
+
+                <div class="info" id="pswdInf">
+                    <p id="pi">Password field</p>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-12 mb-3">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" placeholder="Enter Password" name="password" id="password" required>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="confirmPassword">Confirm Password</label>
+                            <input type="password" class="form-control" placeholder="Confirm your Password" name="confirmPassword" id="confirmPassword" required>
+                        </div>
                     </div>
                 </div>
 
@@ -239,8 +254,6 @@
     </script>
 <!--TILL HERE-->
 
-
-
     <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -248,6 +261,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+
 
 </body>
 
