--- a/newAccountPages/newAccount.html
+++ b/newAccountPages/newAccount.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    
+
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 
@@ -20,53 +20,56 @@
     <link rel="icon" type="image/png" href="navicon.svg">
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
     <!--External JS-->
     <script src="newAccount.js"></script>
 </head>
 
 <body>
-  
-   
+
+
     <nav class="navbar navbar-dark bg-primary p-3 ">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#" id="nm">
-            <img src="navicon.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-            Apna Bank
-        </a>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home
+            <a class="navbar-brand" href="#" id="nm">
+                <img src="navicon.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+                Apna Bank
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Account</a>
-          </li>
-          <li class="nav-item dropdown bg-primary">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"  aria-expanded="false">
-              Services
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Send Money</a>
-              <a class="dropdown-item" href="#">Raise a Complaint</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My Account</a>
+                    </li>
+                    <li class="nav-item dropdown bg-primary">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-expanded="false">
+                            Services
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Send Money</a>
+                            <a class="dropdown-item" href="#">Raise a Complaint</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Log Out</a>
+                    </li>
+                </ul>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log Out</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-</div>
-    </nav>   
+        </div>
+        </div>
+    </nav>
 
 
     <!--For a alert to check filled info-->
@@ -95,7 +98,7 @@
                 <div class="col-md-4 mb-3">
                     <label for="gender">Gender</label>
                     <select class="form-control" id="gender" name="gender" required>
-                        <option selected hidden value=""></option> 
+                        <option selected hidden value=""></option>
                         <option>Male</option>
                         <option>Female</option>
                         <option>Other</option>
@@ -107,7 +110,8 @@
             <div class="form-row">
                 <div class="col-md-6 mb-3">
                     <label for="email">Email Address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
+                        required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -195,11 +199,13 @@
                     <div class="form-row">
                         <div class="col-md-12 mb-3">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control" placeholder="Enter Password" name="password" id="password" required>
+                            <input type="password" class="form-control" placeholder="Enter Password" name="password"
+                                id="password" required>
                         </div>
                         <div class="col-md-12 mb-3">
                             <label for="confirmPassword">Confirm Password</label>
-                            <input type="password" class="form-control" placeholder="Confirm your Password" name="confirmPassword" id="confirmPassword" required>
+                            <input type="password" class="form-control" placeholder="Confirm your Password"
+                                name="confirmPassword" id="confirmPassword" required>
                         </div>
                     </div>
                 </div>
@@ -231,7 +237,7 @@
     <!-- Footer -->
 
 
-<!--THIS SCRIPT IS FOR CHECKING IF THE INFORMATION IS FILLED IN FORM-->
+    <!--THIS SCRIPT IS FOR CHECKING IF THE INFORMATION IS FILLED IN FORM-->
     <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
         (function () {
@@ -252,7 +258,7 @@
             }, false);
         })();
     </script>
-<!--TILL HERE-->
+    <!--TILL HERE-->
 
     <!-- jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
