Fixed SUBMIT button styling (ISSUE 3)

--- a/transaction page/transaction.html
+++ b/transaction page/transaction.html
@@ -85,7 +85,8 @@
     <input type="checkbox" required name="terms" id="tick" value="tick">
     <label for="tick"> Are you willing to confirm</label>
     <br><br>
-    <div class="btn" href="#">SUBMIT</div>
+    <!--<div class="btn" href="#">SUBMIT</div>-->
+    <button type="button" class="btn btn-dark btn-lg btn-block">SUBMIT</button>
   </div>
 </div>
 
