--- a/home page/index2.html
+++ b/home page/index2.html
@@ -14,21 +14,34 @@
 </head>
 
 <body>
+<!--sode for navbar -->
   <section class="yellow">
     <nav class="shift">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">transactions</a></li>
+        <li><div class="dropdown show">
+  <a class="dropdown-toggle" href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Transactions
+  </a>
+
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <a class="dropdown-item" href="#">transaction within Bank</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">transaction on diferent bank</a>
+  </div>
+</div></li>
         <li><a href="#">Account</a></li>
         <li><a href="#">Login</a></li>
+        <li><a href="#">Profile</a></li>
       </ul>
      
     </nav>
   </section>
 
-
-  <header class="jumbo">
+<!-- Ends -->
+<!-- code for header -->  
+<header class="jumbo">
     <div class="container">
       <div class="row">
         <div class="col-12 col-sm-4 heading">
@@ -51,9 +64,10 @@
        </div>
  <h3>New here? </h3>
   </header>
-
-  <div class="slider"></div>
+<!-- ends -->
+<!-- grid starts -->
   <div class="grid">
+    <!-- carousel -->
     <div class="row row-content anim-car">
       <div class="col">
         <div id="mycarousel" class="carousel slide" data-ride="carousel">
@@ -103,9 +117,12 @@
         </div>
       </div>
     </div>
+    <!-- ends -->
+    <!-- div1 -->
     <a href="#" class="block main-div-1">
       <div class="div-1">
         <h2>Account Details</h2>
+        <!-- svg tags are svg animations dont mess with it -->
         <svg width="467" height="352" viewBox="0 0 467 352" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g id="accountdetails">
             <path id="Vector"
@@ -208,8 +225,9 @@
 
       </div>
     </a>
-
-    <a href="#" class="block main-div-2">
+<!-- ends -->
+<!-- div2 -->    
+<a href="#" class="block main-div-2">
       <div class="div-2">
         <h2>current</h2>
         <svg width="317" height="277" viewBox="0 0 317 277" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -658,11 +676,10 @@
             </clipPath>
           </defs>
         </svg>
-
-
-
-      </div>
+ </div>
     </a>
+    <!-- ends -->
+    <!-- div3 -->
     <a href="#" class="block main-div-3">
       <div class="div-3">
         <h2>Savings</h2>
@@ -691,11 +708,10 @@
 <path id="Vector_21" d="M549.116 417H0.884045C0.649995 416.999 0.425768 416.911 0.260508 416.756C0.095249 416.6 0.00244141 416.389 0.00244141 416.169C0.00244141 415.948 0.095249 415.737 0.260508 415.582C0.425768 415.426 0.649995 415.338 0.884045 415.337H549.116C549.35 415.337 549.575 415.425 549.741 415.581C549.907 415.737 550 415.948 550 416.169C550 416.389 549.907 416.601 549.741 416.756C549.575 416.912 549.35 417 549.116 417Z" fill="#3F3D56"/>
 </g>
 </svg>
-
-
-      </div>
+</div>
+    <!-- ends -->
     </a>
-    </a>
+    <!-- div4 btw divs are anchor tags here so dont get confused -->
     <a href="#" class="block main-div-5">
       <div class="div-5">
         <h2>contactus</h2>
@@ -1205,11 +1221,10 @@
             </clipPath>
           </defs>
         </svg>
-
-
-
-      </div>
+</div>
     </a>
+    <!-- ends -->
+    <!-- div5 -->
     <a href="#" class="main-div-4">
       <div class="div-4">
         <h2>Money transfer</h2>
@@ -1387,9 +1402,9 @@
             d="M97.6081 90.3261L98.249 90.5691L97.2471 94.3515L100.468 95.2726L100.312 96.0561L96.3889 94.9329L97.6081 90.3261Z"
             fill="#3F3D56" />
         </svg>
-
-      </div>
-    </a>
+</div> </a>
+<!-- ends -->
+<!-- grid ends -->
   </div>
   <footer class="footer">
     <div class="container">
@@ -1423,7 +1438,7 @@
                 class="fa fa-linkedin"></i></a>
             <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
             <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-            <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+            <a class="btn btn-social-icon" href="mailto:jayanthsibbala123@gmail.com"><i class="fa fa-envelope-o"></i></a>
           </div>
 
         </div>
@@ -1436,7 +1451,7 @@
     </div>
   </footer>
 
-
+<!-- these all r scripts dont mess with it -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
@@ -1465,3 +1480,4 @@
 </body>
 
 </html>
+<!-- My code is small now:) -->
