changed heading size

--- a/transaction summary/transactionsummary.html
+++ b/transaction summary/transactionsummary.html
@@ -90,7 +90,14 @@ body{
   padding: 0;
 }
 
-
+.title{
+  color: #124a92;
+  font-size: 2em;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
     </style>
 </head>
 <body>
@@ -139,7 +146,7 @@ body{
 <!-- table starts-->
 
     <div class="login_box container" style="overflow-x:auto;">
-        <h4 style="color:#29067a; "> Last 5 transaction</h4>
+        <h4 class="title"> Last 5 transaction</h4>
         <table class="table table-hover">
             <thead>
               <tr>
